fixed polaroids on mobile

--- a/styles.css
+++ b/styles.css
@@ -694,3 +694,15 @@ section p {
     display: block;
   }
 }
+
+@media screen and (min-width: 992px) {
+  .polaroid {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .polaroid {
+    display: none;
+  }
+}
